fix(*): some layout issues resolved

--- a/src-bellumgens/styles.scss
+++ b/src-bellumgens/styles.scss
@@ -242,10 +242,6 @@ $grid-toolbar-theme: igx-grid-toolbar-theme($background-color: $background);
   margin-left: auto;
 }
 
-.title.margin-left {
-  margin-left: 8px;
-}
-
   .title.margin-left.player-summary-stat {
     min-width: 54px;
   }
